--- a/app/src/main/res/layout/activity_post_login_dashboard.xml
+++ b/app/src/main/res/layout/activity_post_login_dashboard.xml
@@ -9,6 +9,7 @@
         android:layout_width="389dp"
         android:layout_height="605dp"
         android:orientation="vertical"
+        android:id="@+id/postLoginView"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
