--- a/app/src/main/res/layout/fragment_buyer_dash.xml
+++ b/app/src/main/res/layout/fragment_buyer_dash.xml
@@ -14,16 +14,18 @@
 
         <TextView
             android:layout_width="match_parent"
-            android:layout_height="37dp"
-            android:text="@string/shopping_cart_viewer" />
+            android:layout_height="wrap_content"
+            android:text="Dashboard"
+            android:textAlignment="center"
+            android:textSize="24sp" />
 
         <androidx.recyclerview.widget.RecyclerView
             android:layout_width="match_parent"
-            android:layout_height="639dp" />
+            android:layout_height="602dp" />
 
         <Button
             android:id="@+id/toShoppingCart"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/toShoppingCart" />
     </LinearLayout>
