started implementing add object fragments

--- a/app/src/main/res/layout/fragment_inventory.xml
+++ b/app/src/main/res/layout/fragment_inventory.xml
@@ -6,15 +6,21 @@
     tools:context=".InventoryFragment">
 
     <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+        android:orientation="vertical">
 
-    <Button
-        android:id="@+id/toSDash"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/dashboard" />
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="42dp"
+            android:text="@string/hello_blank_fragment" />
+
+        <Button
+            android:id="@+id/toSDash"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/dashboard" />
+    </LinearLayout>
 
 </FrameLayout>
