--- a/app/src/main/res/layout/fragment_seller_dash.xml
+++ b/app/src/main/res/layout/fragment_seller_dash.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
+<!--suppress ALL -->
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -14,43 +15,53 @@
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Dashboard"
+            android:text="@string/dashboard"
             android:textAlignment="center"
             android:textSize="24sp" />
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="578dp"
+            android:layout_height="453dp"
             android:orientation="horizontal">
 
             <Space
-                android:layout_width="1px1px"
+                android:layout_width="1px"
                 android:layout_height="37dp"
                 android:layout_weight="1" />
 
             <LinearLayout
                 android:layout_width="300dp"
-                android:layout_height="576dp"
+                android:layout_height="441dp"
                 android:layout_weight="1"
                 android:orientation="vertical">
+
+                <androidx.recyclerview.widget.RecyclerView
+                    android:layout_width="match_parent"
+                    android:layout_height="334dp" />
 
                 <TextView
                     android:id="@+id/textView2"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="Seller Summary" />
+                    android:text="@string/seller_summary" />
 
                 <TextView
-                    android:id="@+id/textView3"
+                    android:id="@+id/totalRevenue"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="Total Revenue" />
+                    android:text="@string/total_revenue" />
 
                 <TextView
-                    android:id="@+id/textView4"
+                    android:id="@+id/totalShippingCost"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="TextView" />
+                    android:text="@string/total_shipping_cost" />
+
+                <TextView
+                    android:id="@+id/totalProfit"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="@string/total_profit" />
             </LinearLayout>
 
             <Space
