--- a/app/src/main/res/layout/fragment_buyer_dash.xml
+++ b/app/src/main/res/layout/fragment_buyer_dash.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
+<!--suppress ALL -->
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -10,24 +11,41 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical">
+        android:orientation="horizontal">
 
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Dashboard"
-            android:textAlignment="center"
-            android:textSize="24sp" />
+        <Space
+            android:layout_width="35dp"
+            android:layout_height="11dp" />
 
-        <androidx.recyclerview.widget.RecyclerView
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="602dp" />
+            android:layout_height="match_parent"
+            android:orientation="vertical">
 
-        <Button
-            android:id="@+id/toShoppingCart"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="@string/toShoppingCart" />
+            <TextView
+                android:layout_width="333dp"
+                android:layout_height="wrap_content"
+                android:text="Dashboard"
+                android:textAlignment="center"
+                android:textSize="24sp" />
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/drv"
+                android:layout_width="339dp"
+                android:layout_height="486dp" />
+
+            <Button
+                android:id="@+id/toShoppingCart"
+                android:layout_width="340dp"
+                android:layout_height="wrap_content"
+                android:text="@string/toShoppingCart" />
+        </LinearLayout>
+
+        <Space
+            android:layout_width="35dp"
+            android:layout_height="11dp"
+            android:layout_weight="1" />
+
     </LinearLayout>
 
 </FrameLayout>
