Added RecyclerView adapter for orders on ConfirmOrderFragment

--- a/app/src/main/res/layout/fragment_confirm_order.xml
+++ b/app/src/main/res/layout/fragment_confirm_order.xml
@@ -59,6 +59,7 @@
                 android:text="@string/zip" />
 
             <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/orderList"
                 android:layout_width="match_parent"
                 android:layout_height="281dp">
 
