--- a/app/src/main/res/layout/fragment_buyer_dash.xml
+++ b/app/src/main/res/layout/fragment_buyer_dash.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!--suppress ALL -->
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -8,22 +9,27 @@
 
     <!-- TODO: Update blank fragment layout -->
 
-    <LinearLayout
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="horizontal">
-
-        <Space
-            android:layout_width="35dp"
-            android:layout_height="11dp" />
+        android:layout_height="wrap_content">
 
         <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="vertical">
+            android:layout_width="388dp"
+            android:layout_height="668dp"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="16dp"
+            android:layout_marginEnd="16dp"
+            android:layout_marginBottom="16dp"
+            android:orientation="vertical"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.0">
 
             <TextView
-                android:layout_width="333dp"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="Dashboard"
                 android:textAlignment="center"
@@ -31,21 +37,15 @@
 
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/drv"
-                android:layout_width="339dp"
+                android:layout_width="match_parent"
                 android:layout_height="486dp" />
 
             <Button
                 android:id="@+id/toShoppingCart"
-                android:layout_width="340dp"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="@string/toShoppingCart" />
         </LinearLayout>
-
-        <Space
-            android:layout_width="35dp"
-            android:layout_height="11dp"
-            android:layout_weight="1" />
-
-    </LinearLayout>
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
 </FrameLayout>
