--- a/app/src/main/res/layout/fragment_seller_dash.xml
+++ b/app/src/main/res/layout/fragment_seller_dash.xml
@@ -13,12 +13,15 @@
         android:layout_height="match_parent">
 
         <LinearLayout
-            android:layout_width="346dp"
-            android:layout_height="731dp"
+            android:layout_width="369dp"
+            android:layout_height="662dp"
             android:layout_weight="1"
             android:orientation="vertical"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent">
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.492">
 
             <TextView
                 android:layout_width="match_parent"
@@ -28,6 +31,7 @@
                 android:textSize="24sp" />
 
             <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/sRV"
                 android:layout_width="match_parent"
                 android:layout_height="334dp" />
 
