--- a/app/src/main/res/layout/fragment_add_product.xml
+++ b/app/src/main/res/layout/fragment_add_product.xml
@@ -51,7 +51,7 @@
             android:layout_marginTop="10dp"
             android:layout_marginEnd="10dp"
             android:hint="@string/description"
-            android:hintTextColor="#757575"
+            android:textColorHint="#757575"
             android:inputType="text"
             android:minHeight="48dp"
             android:selectAllOnFocus="true"
