--- a/app/src/main/res/layout/fragment_add_shipping_details.xml
+++ b/app/src/main/res/layout/fragment_add_shipping_details.xml
@@ -36,7 +36,7 @@
             android:layout_marginTop="10dp"
             android:layout_marginEnd="10dp"
             android:hint="@string/city"
-            android:hintTextColor="#757575"
+            android:textColorHint="#757575"
             android:inputType="text"
             android:minHeight="48dp"
             android:selectAllOnFocus="true"
@@ -53,7 +53,7 @@
             android:layout_marginTop="10dp"
             android:layout_marginEnd="10dp"
             android:hint="@string/region"
-            android:hintTextColor="#757575"
+            android:textColorHint="#757575"
             android:inputType="text"
             android:minHeight="48dp"
             android:selectAllOnFocus="true"
@@ -70,7 +70,7 @@
             android:layout_marginTop="10dp"
             android:layout_marginEnd="10dp"
             android:hint="@string/country"
-            android:hintTextColor="#757575"
+            android:textColorHint="#757575"
             android:inputType="text"
             android:minHeight="48dp"
             android:selectAllOnFocus="true"
